# jagger-python

./: .cirrus.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  bootstrap-cpp-python.sh  bootstrap-llvm-mingw-cross.sh  jagger.cc  jagger.h  pyproject.toml  python-binding-jagger.cc  python-binding-train-jagger.cc  setup.py
.github/workflows/: wheels.yml
benchmark/: README.md  prepare_dataset.py  requirements.txt  run-jagger.py  run-multiprocess-jagger.py  run-vaporetto.py
cpp_cli/: jagger-app.cc
data/: Makefile  README.md  emoji-kaomoji.csv  kaomoji-list.txt  to_mecab_feature.py
example/: Makefile  batch_tokenize.py  simple_tokenize.py
experimental/mecab_dic_dump/: CMakeLists.txt  README.md
experimental/mecab_dic_dump/mecab/: README
experimental/mecab_dic_dump/mecab/src/: Makefile  dictionary.cpp  dictionary.h
experimental/unidic_convert/: CMakeLists.txt  README.md  bootstrap.sh  dict_dump.cc
jagger/: __init__.py  ccedar_core.h  jagger.h  main.py  python-binding-jagger.cc
train/: CMakeLists.txt  README.md  bootstrap-linux.sh  tagging.py  train_jagger.cc
