[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140

[project]
name = "jagger"

#  Use setuptools_scm https://github.com/pypa/setuptools_scm to set version.
dynamic = ["version"]
# version = "0.1.10"

readme = {file = "README.md", content-type = "text/markdown"}


[project.scripts]
jagger = "jagger:main"
