[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140

[project]
name = "jagger"

# look into version in setuo.py
dynamic = ["version"]

readme = {file = "README.md", content-type = "text/markdown"}


[project.scripts]
jagger = "jagger:main"
