[build-system]
requires = [
    # NOTE: setuptools_scm>=8 is not supported in py3.6 cibuildwheel env.
    # so use older setuptools_scm for a while
    #"setuptools>=64",
    #"setuptools_scm>=8",
    "setuptools>=45",
    "setuptools_scm[toml]<8",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140

[project]
name = "jagger"

# Use setuptools_scm
dynamic = ["version"]

readme = {file = "README.md", content-type = "text/markdown"}


[project.scripts]
jagger = "jagger:main"

[tool.setuptools_scm]
# setuptools_scm>=8
#version_file = "jagger/_version.py"

# setuptools_scm<8
write_to = "jagger/_version.py"
